# SPDX-FileCopyrightText: 2020 Diego Elio Pettenò
#
# SPDX-License-Identifier: 0BSD

[metadata]
name = jlcpcbexporter
description = Exporter of JLCPCB compatible files from EAGLE CAM files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flameeyes/jlcpcbexporter
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_file = LICENSE
license_files =
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    pcb
    jlcpcb
    eagle

[options]
packages = find:
install_requires =
    click
python_requires = ~= 3.7

[options.extras_require]
dev =
    pre-commit
    setuptools_scm

[options.entry_points]
console_scripts =
    jlcpcbexporter = jlcpcbexporter.main:generate

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
